--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "patrick homburg",
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "^4.3.1"
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "jquery-match-height": "^0.7.2"
   }
 }
